--- a/CSS/stylesheet.css
+++ b/CSS/stylesheet.css
@@ -43,3 +43,21 @@ section {
     /* Example: */
     border: 1px solid #ccc;
 }
+
+nav ul {
+    list-style-type: none;
+    display: flex;
+}
+
+nav li {
+    margin-right: 20px;
+}
+
+nav a {
+    color: white;
+    text-decoration: none;
+}
+
+nav a:hover {
+    text-decoration: underline;
+}
